--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.realm.io" }
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
+        maven { url "https://maven2.clevertap.com" }
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.2"
-        classpath "io.realm:realm-gradle-plugin:6.0.2"
-
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "io.realm:realm-gradle-plugin:10.15.1"
+        classpath 'com.google.gms:google-services:4.4.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
