--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,13 @@ plugins {
 }
 
 android {
-    compileSdk 35
+    compileSdk 34
+    namespace 'com.ssgb.easyattendance'
 
     defaultConfig {
         applicationId "com.ssgb.easyattendance"
         minSdk 19
-        targetSdk 35
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
