--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ssgb.easyattendance">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ssgb_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ssgb_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -21,7 +20,8 @@
             android:theme="@style/AppTheme2" />
         <activity android:name="com.ssgb.easyattendance.SignupActivity" />
         <activity android:name="com.ssgb.easyattendance.MainActivity" />
-        <activity android:name="com.ssgb.easyattendance.LoginActivity"
+        <activity
+            android:name="com.ssgb.easyattendance.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
