--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,12 @@ dependencies {
     // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
     
+    // Calendar View
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
+    
+    // PDF Generation
+    implementation 'com.itextpdf:itext7-core:7.2.5'
+    
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
